--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,26 +3,76 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+
+	{% block extrastatic %}
+	{% endblock %}
+
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-	
-	<title>{% block title %}Document{% endblock %}</title>
+	<title>{% block title %}Document {% endblock %}</title>
 </head>
 <body>
-	{% block header %}
-	{%include 'base/header.html' %}
+<div class="container">
+	{% block navbar %}
+		<div class="bs-docs-section clearfix">
+		    <div class="row">
+		        <div class="col-lg-12">
+		            <div class="bs-component">
+		            	<nav class="navbar navbar-default">
+		                	<div class="container-fluid">
+		                  		<div class="navbar-header">
+		                    		<a class="navbar-brand" href="#">Home</a>
+		                  		</div>
+		                  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		                    	<ul class="nav navbar-nav">
+		                      		<li class="dropdown">
+		                        		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mascotas <span class="caret"></span></a>
+				                        <ul class="dropdown-menu" role="menu">
+				                        	<li><a href="{% url 'mascota:mascota_crear' %}">Registrar</a></li>
+				                        	<li><a href="{% url 'mascota:mascota_listar' %}">Listar</a></li>
+				                        </ul>
+		                      		</li>
+			                        <li class="dropdown">
+			                        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Adopciones<span class="caret"></span></a>
+			                        	<ul class="dropdown-menu" role="menu">
+				                          	<li><a href="{% url 'adopcion:solicitud_crear' %}">Solicitar</a></li>
+				                          	<li><a href="{% url 'adopcion:solicitud_listar' %}">Listar solicitudes</a></li>
+			                        	</ul>
+			                        </li>
+		                    	</ul>
+		                    	<ul class="nav navbar-nav navbar-right">
+		                        	<li class="dropdown"><a href="http://codigofacilito.com" onclick="pageTracker._link(this.href); return false;">Demo</a>
+		                        	</li>
+		                        	<li class="dropdown">
+		                        		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opciones<span class="caret"></span></a>
+		                        		
+
+		                      		</li>
+		                    	</ul>
+		                    </div>
+		                </div>
+		            </nav>
+		        </div>
+           	</div>
+        </div>
+    </div>    
+
 	{% endblock %}
+
 
 	{% block content %}
-	<h5>Este es el contenido base</h5>
+	<h4>	Bloque de contenido		</h4>
 	{% endblock %}
+
 
 	{% block footer %}
-	<h5>Este es el footer base</h5>
+	{% endblock%}
+</div>
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+	{% block extrajs %}
 	{% endblock %}
 
-	<script> src="https://code.jquery.com/jquery-1.10.2.min.js"</script>
-	<script> src="{% static 'js/boostrap.min.js' %}"</script>
 
 </body>
 </html>
-
